--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
             display: flex;
             flex-direction: column;
             min-height: 100vh;
-            background-color: #f2f2f2;
+            background: url('img/campo.jpg') center/cover no-repeat; /* Added background image */
         }
 
         header {
