--- a/public/index.html
+++ b/public/index.html
@@ -7,54 +7,61 @@
     <title>RSBasketball</title>
     <link rel="icon" type="image/png" href="img/logo.png">
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            background: url('img/campo.jpg') center/cover no-repeat; /* Added background image */
-        }
+       body {
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    background: url('img/campo.jpg') center/cover no-repeat; /* Aggiunto sfondo */
+}
 
-        header {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            position: relative;
-        }
+    header {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    position: relative;
+}
 
-        #logo {
-            max-height: 60px;
-            width: auto;
-            margin-right: 10px;
-        }
+    #logo {
+    max-height: 60px;
+    width: auto;
+    margin-right: 10px;
+    background-color: rgba(255, 255, 255, 0.8); /* Sfondo trasparente */
+    padding: 5px; /* Spazio intorno al logo */
+    border-radius: 8px; /* Bordo arrotondato */
+}
 
-        #header-content {
-            text-align: center;
-        }
 
-        #header-content h1 {
-            margin: 0;
-            font-size: 1.8em;
-        }
+    #header-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row; /* Disposizione orizzontale */
+}
 
-        #header-content p {
-            margin: 5px 0;
-            font-size: 1em;
-            color: #ccc;
-        }
+#header-content h1 {
+    margin: 0;
+    font-size: 1.8em;
+}
 
-        main {
-            flex: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            padding: 20px;
-        }
+#header-content p {
+    margin: 5px 0 0 10px; /* Aggiunto margine in cima e a sinistra per separare dal titolo */
+    font-size: 1em;
+    color: #ccc;
+    display: inline-block; /* Imposta il paragrafo sulla stessa riga dell'h1 */
+}
+main {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+}
 
         table {
             width: 100%;
