--- a/public/index.html
+++ b/public/index.html
@@ -7,60 +7,61 @@
     <title>RSBasketball</title>
     <link rel="icon" type="image/png" href="img/logo.png">
     <style>
-       body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    background: url('img/campo.jpg') center/cover no-repeat; /* Aggiunto sfondo */
-}
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+            background: url('img/campo.jpg') center/cover no-repeat;
+        }
 
-    header {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    position: relative;
-}
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            position: relative;
+        }
 
-#logo {
-    max-height: 60px;
-    width: auto;
-    margin-right: 20px; /* Aggiunto margine a destra */
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 5px;
-    border-radius: 8px;
-}
+        #logo {
+            max-height: 60px;
+            width: auto;
+            margin-right: 10px;
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 5px;
+            border-radius: 8px;
+        }
 
-    #header-content {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row; /* Disposizione orizzontale */
-}
+        #header-content {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: row;
+        }
 
-#header-content h1 {
-    margin: 0;
-    font-size: 1.8em;
-}
+        #header-content h1 {
+            margin: 0;
+            font-size: 1.8em;
+        }
 
-#header-content p {
-    margin: 5px 0 0 10px; /* Aggiunto margine in cima e a sinistra per separare dal titolo */
-    font-size: 1em;
-    color: #ccc;
-    display: inline-block; /* Imposta il paragrafo sulla stessa riga dell'h1 */
-}
-main {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 20px;
-}
+        #header-content p {
+            margin: 5px 0 0 10px;
+            font-size: 1em;
+            color: #ccc;
+            display: inline-block;
+        }
+
+        main {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            padding: 20px;
+        }
 
         table {
             width: 100%;
@@ -70,6 +71,7 @@ main {
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             background-color: #fff;
+            display: none;
         }
 
         th, td {
@@ -83,40 +85,12 @@ main {
             color: #fff;
         }
 
-        /* Media query for responsiveness */
-       @media (max-width: 768px) {
-    header {
-        padding: 10px;
-    }
+        #home {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+        }
 
-    #logo {
-        max-height: 40px;
-        margin-right: 0;
-    }
-
-    #header-content p {
-        margin: 5px 0; /* Adatta il margine per evitare sovrapposizioni */
-    }
-
-    #home button {
-        width: 100%; /* Per una colonna completa su schermi più piccoli */
-    }
-
-    main {
-        padding: 10px;
-    }
-
-    table {
-        margin-top: 10px;
-    }
-
-    footer {
-        padding: 10px;
-        text-align: center;
-    }
-}
-
-        /* Style for additional sections */
         #home button {
             margin: 5px;
             padding: 10px;
@@ -127,24 +101,46 @@ main {
             cursor: pointer;
             border-radius: 4px;
             transition: background-color 0.3s ease;
+            width: calc(20% - 10px);
         }
 
-        #home button:hover {
-            background-color: #555;
+        #home button:last-child {
+            margin-right: 0;
         }
 
-        #home > div {
-            display: none;
+        @media (max-width: 768px) {
+            header {
+                padding: 10px;
+            }
+
+            #logo {
+                max-height: 40px;
+                margin-right: 0;
+            }
+
+            #header-content p {
+                margin: 5px 0;
+            }
+
+            #home button {
+                width: 100%;
+            }
+
+            main {
+                padding: 10px;
+            }
+
+            table {
+                margin-top: 10px;
+            }
+
+            footer {
+                padding: 10px;
+                text-align: center;
+            }
         }
 
-        #ratingTable {
-            display: table; /* Initially set to display: none; */
-        }
-
-        /* Add styles for other sections as needed */
-        #scoutingSection,
-        #loadPlayerSection,
-        #contactSection {
+        #serverSection {
             display: none;
         }
 
@@ -153,7 +149,7 @@ main {
             color: #fff;
             padding: 20px;
             margin-top: auto;
-            text-align: center; /* Centering the copyright text */
+            text-align: center;
         }
 
     </style>
@@ -175,6 +171,7 @@ main {
             <button onclick="showScouting()">Scouting</button>
             <button onclick="loadPlayer()">Load Player</button>
             <button onclick="showContact()">Contact</button>
+            <button onclick="showServer()">Server</button>
 
             <div id="ratingSection">
                 <table id="ratingTable">
@@ -186,22 +183,25 @@ main {
                         </tr>
                     </thead>
                     <tbody>
-                        <!-- Ratings will be inserted here dynamically -->
+                        <!-- Ratings saranno inseriti qui dinamicamente -->
                     </tbody>
                 </table>
             </div>
 
-            <!-- Add other sections or elements for Scouting, Load Player, and Contact as needed -->
             <div id="scoutingSection">
-                <!-- Content for Scouting section -->
+                <!-- Contenuto per la sezione di Scouting -->
             </div>
 
             <div id="loadPlayerSection">
-                <!-- Content for Load Player section -->
+                <!-- Contenuto per la sezione di Load Player -->
             </div>
 
             <div id="contactSection">
-                <!-- Content for Contact section -->
+                <!-- Contenuto per la sezione di Contact -->
+            </div>
+
+            <div id="serverSection">
+                <!-- Contenuto per la sezione del Server -->
             </div>
         </div>
     </main>
@@ -215,7 +215,9 @@ main {
             try {
                 const response = await fetch('/api/giocatori');
                 const contentType = response.headers.get('Content-Type');
-                if (!response.ok) {
+                if (!response.ok)
+
+ {
                     throw new Error(`Errore nella richiesta API: ${response.statusText}`);
                 }
 
@@ -247,7 +249,7 @@ main {
                 const players = await response.json();
 
                 const tbody = document.querySelector('tbody');
-                tbody.innerHTML = ''; // Clear existing rows
+                tbody.innerHTML = '';
                 players.forEach(player => {
                     const row = document.createElement('tr');
                     row.innerHTML = `
@@ -258,35 +260,46 @@ main {
                     tbody.appendChild(row);
                 });
 
-                // Show the rating section and hide other sections
-                document.getElementById('ratingSection').style.display = 'block';
+                document.getElementById('ratingTable').style.display = 'block';
                 document.getElementById('scoutingSection').style.display = 'none';
                 document.getElementById('loadPlayerSection').style.display = 'none';
                 document.getElementById('contactSection').style.display = 'none';
+                document.getElementById('serverSection').style.display = 'none';
             } catch (error) {
                 console.error('Errore nel recupero dei giocatori:', error);
             }
         };
 
         window.showScouting = function () {
-            document.getElementById('ratingSection').style.display = 'none';
+            document.getElementById('ratingTable').style.display = 'none';
             document.getElementById('scoutingSection').style.display = 'block';
             document.getElementById('loadPlayerSection').style.display = 'none';
             document.getElementById('contactSection').style.display = 'none';
+            document.getElementById('serverSection').style.display = 'none';
         };
 
         window.loadPlayer = function () {
-            document.getElementById('ratingSection').style.display = 'none';
+            document.getElementById('ratingTable').style.display = 'none';
             document.getElementById('scoutingSection').style.display = 'none';
             document.getElementById('loadPlayerSection').style.display = 'block';
             document.getElementById('contactSection').style.display = 'none';
+            document.getElementById('serverSection').style.display = 'none';
         };
 
         window.showContact = function () {
-            document.getElementById('ratingSection').style.display = 'none';
+            document.getElementById('ratingTable').style.display = 'none';
             document.getElementById('scoutingSection').style.display = 'none';
             document.getElementById('loadPlayerSection').style.display = 'none';
             document.getElementById('contactSection').style.display = 'block';
+            document.getElementById('serverSection').style.display = 'none';
+        };
+
+        window.showServer = function () {
+            document.getElementById('ratingTable').style.display = 'none';
+            document.getElementById('scoutingSection').style.display = 'none';
+            document.getElementById('loadPlayerSection').style.display = 'none';
+            document.getElementById('contactSection').style.display = 'none';
+            document.getElementById('serverSection').style.display = 'block';
         };
     </script>
 
